@@ -18,8 +18,8 @@
                 <StackPanel Orientation="Horizontal">
                     <imaging:CrispImage 
                             x:Name="imgTag"
-                            Width="13" 
-                            Height="13" 
+                            Width="{Binding LineHeight}"
+                            Height="{Binding LineHeight}"
                             Moniker="{Binding IconMoniker}"
                             Margin="4 0 0 0">
                         <imaging:CrispImage.Style>
@@ -40,7 +40,7 @@
                             Background="Transparent"
                             FontFamily="Calibri"
                             Foreground="#FF999999"
-                            FontSize="11"
+                            FontSize="{Binding LineHeight}"
                             FontWeight="Normal"
                             FontStyle="Normal"
                             Margin="4 0 0 0">
